--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>QR Code Generator</h1>
     <div class="container">
         <p>
             Enter the text or URL </p>
